[gd_scene load_steps=3 format=3 uid="uid://l26esco18bfj"]

[ext_resource type="Script" path="res://addons/questify/scripts/graph_nodes/quest_start_node.gd" id="1_vadyn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5guh5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.4, 0.819608, 0.262745, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="QuestStartNode" type="GraphNode" node_paths=PackedStringArray("name_text_edit", "description_text_edit")]
offset_right = 280.0
offset_bottom = 304.0
mouse_filter = 1
theme_override_constants/separation = 10
theme_override_styles/titlebar = SubResource("StyleBoxFlat_5guh5")
title = "Start"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_vadyn")
name_text_edit = NodePath("NameContainer/NameTextEdit")
description_text_edit = NodePath("DescriptionContainer/DescriptionTextEdit")
label_color = Color(0, 0, 0, 1)

[node name="OutputSlot" type="Label" parent="."]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NameContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="NameContainer"]
layout_mode = 2
text = "Name"

[node name="NameTextEdit" type="LineEdit" parent="NameContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Name"

[node name="DescriptionContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="DescriptionContainer"]
layout_mode = 2
text = "Description"

[node name="DescriptionTextEdit" type="TextEdit" parent="DescriptionContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Description"
wrap_mode = 1

[connection signal="text_changed" from="NameContainer/NameTextEdit" to="." method="_on_name_text_changed"]
[connection signal="text_changed" from="DescriptionContainer/DescriptionTextEdit" to="." method="_on_description_text_changed"]
